--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,14 @@
   },
   "homepage": "https://github.com/anand-2118/form-create-portal#readme",
   "dependencies": {
-    "express": "^4.19.2",
-    "mongoose": "^8.5.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.1",
     "route": "^0.2.5",
     "router": "^1.3.8"
   },
